# linkedin_agent

./: .gitignore  AGENT_ARCHITECTURE.md  LOGGING.md  README.md  candidate_scoring_report.md  config.py  config_user.py  configure.py  debug_linkedin_page.py  example_job_description.txt  main.py  pyproject.toml  test_config_functional.py  test_search_debug.py
agents/: linkedin_agent.py
docs/: AGENT_ARCHITECTURE.md  CONFIGURATION.md  HEAP_CLEANUP_TEST.md
documents/: introduction.md
job_descriptions/: data_scientist_healthcare.txt  devops_engineer.txt  full_stack_engineer.txt  mobile_engineer_ios.txt  product_manager.txt  senior_frontend_engineer.txt
models/: linkedin_profile.py  quality_system.py
pipeline/: scoring.py  storage.py
runner/: result_saver.py  run_linkedin_agent.py  run_linkedin_agent_clean.py  workflow_manager.py
src/: dummy_agent.py  linkedin_agent.py
src/linkedin_agent/: __init__.py  config_user.py  configure.py  main.py  view_logs.py
src/linkedin_agent/agents/: linkedin_agent.py
src/linkedin_agent/core/: __init__.py  workflow_state.py
src/linkedin_agent/models/: __init__.py  candidate_quality.py  quality_system.py
src/linkedin_agent/pipeline/: outreach.py
src/linkedin_agent/runner/: result_saver.py  (+1 more)
tests/: analyze_new_structure.py  debug_linkedin_search.py  final_debug.py  quick_selector_test.py  test_agent_minimal.py  test_candidate_scoring.py  test_complete_recruitment_workflow.py  test_config_verification.py  test_extraction_logic.py  test_name_extraction.py  test_search_debug.py  test_skip_auth.py
tools/: candidate_evaluation.py  candidate_outreach.py  candidate_scorer.py  extract_profile.py  extract_profile_dom_based.py  linkedin_auth.py  linkedin_selectors.py  people_search.py  profile_extractor.py  smart_search.py  strategy_creation.py  strategy_generator.py  targeted_extraction.py  web_nav.py
utils/: role_prompts.py  smoke_cdp.py  streaming_handler.py
(+22 files in other folders)
