[tool.poetry]
name = "linkedin-agent"
version = "0.1.0"
description = "A LinkedIn automation agent"
authors = ["Li Yin <li.yin.gravity@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
adalflow = "^1.1.0"
python-dotenv = "^1.0.1"
websocket-client = "^1.8.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
