[tool.poetry]
name = "linkedin-agent"
version = "0.1.0"
description = "A LinkedIn automation agent"
authors = ["Li Yin <li.yin.gravity@gmail.com>"]
readme = "README.md"
packages = [{include = "linkedin_agent", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
adalflow = {path = "/Users/li/github/SylphAI-Inc/adal/backend/AdalFlow/adalflow", develop = true}
python-dotenv = "^1.0.1"
websocket-client = "^1.8.0"
requests = "^2.32.3"
pydantic = "^2.11.7"
openai = "^1.101.0"

[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]
linkedin-agent = "linkedin_agent.main:main"
linkedin-config = "linkedin_agent.configure:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
